Styled order button and fixed scrollbar bug

--- a/ice-cream-shop/src/app/app.component.css
+++ b/ice-cream-shop/src/app/app.component.css
@@ -1,5 +1,5 @@
 * {
-  color: rgb(73, 53, 53);
+  color: #523844;
 }
 
 *:not(.mat-icon) {
