--- a/ice-cream-shop/src/app/home/home.component.css
+++ b/ice-cream-shop/src/app/home/home.component.css
@@ -1,6 +1,12 @@
 .container {
+    margin: 3em 0;
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
+    align-items: center;
     text-align: center;
+}
+
+.container a {
+    margin: 3em 0;
+    padding: 0.5em 3em;
 }
